--- a/mkdocs/requirements.txt
+++ b/mkdocs/requirements.txt
@@ -1,16 +1,20 @@
+mypip: VIRTUAL_ENV: /home/maro/docs/mkdocs/venv-mkdocs
+mypip: python -m pip freeze
 click==7.1.2
 future==0.18.2
+importlib-metadata==1.6.0
 Jinja2==2.11.2
-joblib==0.14.1
+joblib==0.15.0
 livereload==2.6.1
-lunr==0.5.6
-Markdown==3.2.1
+lunr==0.5.8
+Markdown==3.2.2
 MarkupSafe==1.1.1
-mkdocs==1.1
+mkdocs==1.1.2
 nltk==3.5
 pkg-resources==0.0.0
 PyYAML==5.3.1
-regex==2020.4.4
+regex==2020.5.14
 six==1.14.0
 tornado==6.0.4
 tqdm==4.46.0
+zipp==3.1.0
