--- a/mkdocs/build
+++ b/mkdocs/build
@@ -9,7 +9,7 @@
 #
 SCRIPT_NAME=`basename $0`
 SCRIPT_DIR=`dirname $0`
-VERSION="${SCRIPT_NAME}  2  (04-MAY-2020)"
+VERSION="${SCRIPT_NAME}  2  (19-MAY-2020)"
 #
 ###############################################################################
 #
@@ -22,13 +22,14 @@ nocheck=0
 print_usage() {
     cat - <<EOT
 
-Usage: ${SCRIPT_NAME} [option(s)] [venv]
+Usage: ${SCRIPT_NAME} [option(s)] [check|venv]
        Call mkdocs to build the maroph.github.io related files
 
 Options:
   -h|--help     : show this help and exit
   -V|--version  : show version information and exit
-  -n|--no-check : don't check for the virtual environment
+  -n|--no-check : don't check for own virtual environment
+  check         : check building environment
   venv          : create the required virtual environment and exit
 
 EOT
@@ -89,8 +90,49 @@ cd ${SCRIPT_DIR} || exit 1
 #
 ###############################################################################
 #
+if [ "$1" = "check" ]
+then
+    exitcode=0
+#
+    if [ ! -d ${SCRIPT_DIR}/venv ]
+    then
+        echo "${SCRIPT_NAME}: directory ${SCRIPT_DIR}/venv missing"
+        echo "${SCRIPT_NAME}: call: 'build venv'"
+        exitcode=1
+    fi
+#
+    echo "${SCRIPT_NAME}: Git repository user/email settings"
+    git config --list | grep 'user.name' >/dev/null 2>/dev/null
+    if [ $? -ne 0 ]
+    then
+        echo "${SCRIPT_NAME}: user.name not set"
+        echo "${SCRIPT_NAME}: call: git config --add user.name \"Your Name\""
+        exitcode=1
+    fi
+#
+    git config --list | grep 'user.email' >/dev/null 2>/dev/null
+    if [ $? -ne 0 ]
+    then
+        echo "${SCRIPT_NAME}: user.email not set"
+        echo "${SCRIPT_NAME}: call: git config --add user.email \"Your Email\""
+        exitcode=1
+    fi
+#
+    git config --list | grep 'user.'
+    exit $exitcode
+fi
+#
+###############################################################################
+#
 if [ "$1" = "venv" ]
 then
+    if [ "${VIRTUAL_ENV}" != "" ]
+    then
+        echo "${SCRIPT_NAME}: deactivate the current virtual environment"
+        echo "${SCRIPT_NAME}: \$VIRTUAL_ENV : ${VIRTUAL_ENV}"
+        exit 1
+    fi
+#
     rm -fr ./venv
     echo "${SCRIPT_NAME}: python3 -m venv ./venv"
     python3 -m venv ./venv || exit 1
@@ -117,7 +159,7 @@ then
     if [ ! -d ${SCRIPT_DIR}/venv ]
     then
         echo "${SCRIPT_NAME}: directory ${SCRIPT_DIR}/venv missing"
-        echo "${SCRIPT_NAME}: call first './build venv'"
+        echo "${SCRIPT_NAME}: call first 'build venv'"
         exit 1
     fi
 #
@@ -140,8 +182,6 @@ else
 fi
 #
 ###############################################################################
-#
-cd ${SCRIPT_DIR} || exit 1
 #
 echo "${SCRIPT_NAME}: rm -fr docs"
 rm -fr docs
@@ -181,10 +221,6 @@ git add . || exit 1
 echo ""
 echo "${SCRIPT_NAME}: git status"
 git status
-#
-#echo ""
-#echo "${SCRIPT_NAME}: git log -3"
-#git log --graph --decorate --oneline -3
 #
 ###############################################################################
 #
