--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -45,6 +45,7 @@ docs_dir: docs-src
 site_dir: docs
 
 use_directory_urls: false
+strict: true
 
 copyright: Copyright (c) 2020 <a href="https://github.com/maroph">Manfred Rosenboom (maroph)</a>
 
