--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,11 @@ site_author: Manfred Rosenboom (maroph)
 
 repo_name: GitHub
 repo_url: https://github.com/maroph/maroph.github.io/
-# edit_uri: "edit/master/mkdocs/docs-src"
+# edit_uri: "edit/master/docs-src"
 # view readonly version
-# edit_uri: "blob/master/mkdocs/docs-src"
+edit_uri: "blob/master/docs-src"
 # link to github project site
-edit_uri: ""
+# edit_uri: ""
 
 theme:
     name: mkdocs
@@ -31,6 +31,7 @@ nav:
             - Blogger: https://maroph.blogspot.com/
             - GitHub: https://github.com/maroph/
             - Gravatar: https://en.gravatar.com/maroph
+            - Homepage: https://manfred.rosenboom.name
             - LinkedIn: https://www.linkedin.com/in/manfredrosenboom
             - Pastebin: https://pastebin.com/u/maroph
             - Twitter: https://twitter.com/maroph
@@ -52,7 +53,7 @@ nav:
             - Mozilla CA PEM File: https://curl.haxx.se/docs/caextract.html
             - SSL Server Test: https://www.ssllabs.com/ssltest/
     - Info:
-        - About: https://github.com/maroph
+        - About: info/about.md
         - License: info/license.md
         - Sources: info/sources.md
 
