--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,10 +29,12 @@ nav:
         - My Sites:
             - Blogger: https://maroph.blogspot.com/
             - GitHub: https://github.com/maroph/
+            - GitHub Page: https://maroph.github.io/
             - Gravatar: https://en.gravatar.com/maroph
             - Homepage: https://manfred.rosenboom.name
             - LinkedIn: https://www.linkedin.com/in/manfredrosenboom
             - Pastebin: https://pastebin.com/u/maroph
+            - Personal Home Page: https://manfred.rosenboom.name/
             - Twitter: https://twitter.com/maroph
             - WordPress: https://maroph.wordpress.com
         - Collaboration:
