add some security related links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,12 +51,19 @@ nav:
             - DB-Engines Ranking: https://db-engines.com/en/ranking
             - TIOBE Index: https://www.tiobe.com/tiobe-index/
         - Security:
+            - BSI CERT: https://www.cert-bund.de/overview/AdvisoryShort
             - Certificate Search: https://crt.sh/
+            - CVE Details: https://www.cvedetails.com/
+            - Debian Security Bug Tracker: https://security-tracker.debian.org/tracker/
+            - Debian Security Information: https://www.debian.org/security/
+            - Debian LTS Security Information: https://www.debian.org/lts/security/
+            - Exploit DB: https://www.exploit-db.com/
             - Geekflare Tools for Webmasters: https://gf.dev/
             - Have I been pwned: https://haveibeenpwned.com/
             - HPI Identity Leak Checker: https://sec.hpi.de/ilc/d?lang=en
             - Mozilla CA PEM File: https://curl.haxx.se/docs/caextract.html
             - Mozilla SSL Configuration Generator: https://ssl-config.mozilla.org/
+            - NVD Feeds: https://nvd.nist.gov/vuln/data-feeds
             - Security Headers (Web Server): https://securityheaders.com/
             - SSL Server Test: https://www.ssllabs.com/ssltest/
         - Software:
