--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,9 @@ site_author: Manfred Rosenboom (maroph)
 
 repo_name: GitHub
 repo_url: https://github.com/maroph/maroph.github.io/
-# edit_uri: "edit/master/docs-src"
+# edit_uri: "edit/master/docs"
 # view readonly version
-# edit_uri: "blob/master/docs-src"
+# edit_uri: "blob/master/docs"
 # link to GitHub repository site
 edit_uri: ""
 
@@ -80,13 +80,13 @@ nav:
         - License: info/license.md
         - Sources: info/sources.md
 
-docs_dir: docs-src
-site_dir: docs
+docs_dir: docs
+site_dir: site
 
 use_directory_urls: false
 strict: true
 
-copyright: Copyright (c) 2020-2021 <a href="https://github.com/maroph">Manfred Rosenboom (maroph)</a>
+copyright: Copyright (c) 2020-2022 <a href="https://github.com/maroph">Manfred Rosenboom (maroph)</a>
 
 plugins:
     - search:
