--- a/build
+++ b/build
@@ -23,7 +23,7 @@ nocheck=0
 print_usage() {
     cat - <<EOT
 
-Usage: ${SCRIPT_NAME} [option(s)] [check|venv]
+Usage: ${SCRIPT_NAME} [option(s)] [check|venv|deploy]
        Call mkdocs to build the maroph.github.io related files
 
 Options:
@@ -32,6 +32,10 @@ Options:
   -n|--no-check : don't check for own virtual environment
   check         : check building environment
   venv          : create the required virtual environment and exit
+  deploy        : create the site and push all data to branch gh-pages
+                  (mkdocs gh-deploy)
+
+  Default: call 'mkdocs build'
 
 EOT
 }
@@ -199,8 +203,20 @@ echo ""
 #
 ###############################################################################
 #
-echo "${SCRIPT_NAME}: mkdocs gh-deploy"
-mkdocs gh-deploy || exit 1
+if [ "$1" = "deploy" ]
+then
+    echo "${SCRIPT_NAME}: mkdocs gh-deploy"
+    mkdocs gh-deploy || exit 1
+    echo ""
+#
+    echo "${SCRIPT_NAME}: git status"
+    git status
+fi
+#
+###############################################################################
+#
+echo "${SCRIPT_NAME}: mkdocs build"
+mkdocs build || exit 1
 echo ""
 #
 echo "${SCRIPT_NAME}: git status"
