--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_name: GitHub
 repo_url: https://github.com/maroph/maroph.github.io/
 # edit_uri: "edit/master/docs"
 # view readonly version
-# edit_uri: "blob/master/docs"
+edit_uri: "blob/master/docs"
 # link to GitHub repository site
 edit_uri: ""
 
