fix bug in script build

--- a/build
+++ b/build
@@ -211,6 +211,8 @@ then
 #
     echo "${SCRIPT_NAME}: git status"
     git status
+#
+    exit 0
 fi
 #
 ###############################################################################
