change theme to Material for MkDocs

--- a/build
+++ b/build
@@ -10,27 +10,23 @@
 #
 SCRIPT_NAME=`basename $0`
 SCRIPT_DIR=`dirname $0`
-VERSION="${SCRIPT_NAME}  6  (18-JAN-2022)"
+VERSION="${SCRIPT_NAME}  1  (05-FEB-2022)"
 #
 ###############################################################################
 #
 export LANG="en_US.UTF-8"
-#
-nocheck=0
 #
 ###############################################################################
 #
 print_usage() {
     cat - <<EOT
 
-Usage: ${SCRIPT_NAME} [option(s)] [check|venv|deploy]
+Usage: ${SCRIPT_NAME} [option(s)] [venv|deploy]
        Call mkdocs to build the maroph.github.io related files
 
 Options:
   -h|--help     : show this help and exit
   -V|--version  : show version information and exit
-  -n|--no-check : don't check for own virtual environment
-  check         : check building environment
   venv          : create the required virtual environment and exit
   deploy        : create the site and push all data to branch gh-pages
                   (mkdocs gh-deploy)
@@ -68,9 +64,6 @@ do
             echo ${VERSION}
             exit 0
             ;;
-        -n | --no-check)
-            nocheck=1
-            ;;
         --)
             shift 1
             break
@@ -95,40 +88,6 @@ cd ${SCRIPT_DIR} || exit 1
 #
 ###############################################################################
 #
-if [ "$1" = "check" ]
-then
-    exitcode=0
-#
-    if [ ! -d ${SCRIPT_DIR}/venv ]
-    then
-        echo "${SCRIPT_NAME}: directory ${SCRIPT_DIR}/venv missing"
-        echo "${SCRIPT_NAME}: call: 'build venv'"
-        exitcode=1
-    fi
-#
-    echo "${SCRIPT_NAME}: Git repository user/email settings"
-    git config --list | grep 'user.name' >/dev/null 2>/dev/null
-    if [ $? -ne 0 ]
-    then
-        echo "${SCRIPT_NAME}: user.name not set"
-        echo "${SCRIPT_NAME}: call: git config --add user.name \"Your Name\""
-        exitcode=1
-    fi
-#
-    git config --list | grep 'user.email' >/dev/null 2>/dev/null
-    if [ $? -ne 0 ]
-    then
-        echo "${SCRIPT_NAME}: user.email not set"
-        echo "${SCRIPT_NAME}: call: git config --add user.email \"Your Email\""
-        exitcode=1
-    fi
-#
-    git config --list | grep 'user.'
-    exit $exitcode
-fi
-#
-###############################################################################
-#
 if [ "$1" = "venv" ]
 then
     if [ "${VIRTUAL_ENV}" != "" ]
@@ -144,16 +103,20 @@ then
     echo "${SCRIPT_NAME}: . venv/bin/activate"
     . ${SCRIPT_DIR}/venv/bin/activate
 #
-    echo "python -m pip install --upgrade pip"
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade pip"
     python -m pip install --upgrade pip || exit 1
-    echo "python -m pip install --upgrade setuptools"
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade setuptools"
     python -m pip install --upgrade setuptools || exit 1
-    echo "python -m pip install --upgrade wheel"
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade wheel"
     python -m pip install --upgrade wheel || exit 1
-    echo "python -m pip install --upgrade mkdocs"
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade mkdocs"
     python -m pip install --upgrade mkdocs || exit 1
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade mkdocs-material"
+    python -m pip install --upgrade mkdocs-material || exit 1
+    echo "${SCRIPT_NAME}: python -m pip install --upgrade mkdocs-git-revision-date-plugin"
+    python -m pip install --upgrade mkdocs-git-revision-date-plugin || exit 1
 #
-    echo "python -m pip freeze >requirements.txt"
+    echo "${SCRIPT_NAME}: python -m pip freeze >requirements.txt"
     python -m pip freeze >${SCRIPT_DIR}/venv/requirements.txt || exit 1
 #
     exit 0
@@ -177,16 +140,6 @@ then
         exit 1
     fi
     . ${SCRIPT_DIR}/venv/bin/activate
-else
-    if [ "${VIRTUAL_ENV}" != "${SCRIPT_DIR}/venv" ]
-    then
-        if [ ${nocheck} -eq 0 ]
-        then
-            echo "${SCRIPT_NAME}: wrong virtual environment"
-            echo "${SCRIPT_NAME}: \$VIRTUAL_ENV : ${VIRTUAL_ENV}"
-            exit 1
-        fi
-    fi
 fi
 #
 python -m pip show mkdocs >/dev/null 2>/dev/null
@@ -199,6 +152,30 @@ fi
 echo "${SCRIPT_NAME}: Python module mkdocs available"
 echo ""
 python -m pip show mkdocs 2>/dev/null | head -2
+echo ""
+#
+python -m pip show mkdocs-material >/dev/null 2>/dev/null
+if [ $? -ne 0 ]
+then
+    echo "${SCRIPT_NAME}: Python module mkdocs-material not available"
+    exit 1
+fi
+#
+echo "${SCRIPT_NAME}: Python module mkdocs-material available"
+echo ""
+python -m pip show mkdocs-material 2>/dev/null | head -2
+echo ""
+#
+python -m pip show mkdocs-git-revision-date-plugin >/dev/null 2>/dev/null
+if [ $? -ne 0 ]
+then
+    echo "${SCRIPT_NAME}: Python module mkdocs-git-revision-date-plugin not available"
+    exit 1
+fi
+#
+echo "${SCRIPT_NAME}: Python module mkdocs-git-revision-date-plugin available"
+echo ""
+python -m pip show mkdocs-git-revision-date-plugin 2>/dev/null | head -2
 echo ""
 #
 ###############################################################################
